# geodesic_comparison

./: .gitignore  CMakeLists.txt  README.md  setup.sh
geodesic_comparison/: CMakeLists.txt  dijkstra.cpp  dijkstra.h  geodesic.cpp  geodesic.h  geodesic_function.cpp  integral.cpp  integral.h
include/: dijkstra.h  integral.h
scripts/: align_data.py  align_meshes.py  clean_all_data.py  compare_all.py  compute_geodesics.py  construct_meshes.py  construct_mirrored.py  copy_gts.py  extract_files.py  get_dirs_files.py  move_mirrored.py  plot_data.py  prep_dirs.py  prep_for_grasping.py  run_all.py
scripts/mlx_scripts/: clean.mlx  smooth_downsample_gt.mlx
scripts/yaml_files/: GRASP_590_Dataset.yaml  YCB_Dataset.yaml
src/: function_comparison.cpp  geodesic.cpp  integral.cpp
